src/test/ui/closures/closure-bounds-static-cant-capture-borrowed.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/closure-bounds-static-cant-capture-borrowed.rs:5:5
   |
LL |     bar(|| {
   |     ^^^ lifetime `'static` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
